--- a/index.html
+++ b/index.html
@@ -1,23 +1,82 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <title>Mis Redes Sociales</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Esencia Ardiente Chincha</title>
   <style>
-    body { text-align: center; font-family: Arial; margin-top: 50px; }
-    button {
-      display: block;
-      margin: 15px auto;
-      padding: 10px 20px;
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(135deg, #e0aaff, #a5d8ff, #ffe066);
+      background-attachment: fixed;
+      color: #2d2d2d;
+      text-align: center;
+      padding: 60px 20px;
+    }
+
+    h1 {
+      font-size: 2.2em;
+      margin-bottom: 20px;
+      color: #6a0572;
+      text-shadow: 1px 1px 2px rgba(0,0,0,0.1);
+    }
+
+    p.subtitulo {
+      font-size: 1.2em;
+      margin-bottom: 30px;
+      color: #444;
+    }
+
+    .redes {
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+      max-width: 300px;
+      margin: auto;
+    }
+
+    .btn-red {
+      background: #6c63ff;
+      color: white;
+      text-decoration: none;
+      padding: 14px 24px;
+      border-radius: 8px;
       font-size: 18px;
-      cursor: pointer;
+      transition: 0.3s;
+    }
+
+    .btn-red:hover {
+      background: #4b47b2;
+    }
+
+    .logo {
+      width: 120px;
+      margin-bottom: 30px;
+    }
+
+    @media (min-width: 600px) {
+      .redes {
+        flex-direction: row;
+        justify-content: center;
+      }
     }
   </style>
 </head>
 <body>
-  <h1>Síguenos en nuestras redes</h1>
-  <button onclick="window.location.href='https://www.tiktok.com/@ejemplo'">TikTok</button>
-  <button onclick="window.location.href='https://www.facebook.com/ejemplo'">Facebook</button>
-  <button onclick="window.location.href='https://www.youtube.com/@ejemplo'">YouTube</button>
+  <img src="https://raw.githubusercontent.com/pyataco/eachincha_redes/main/logo.png" alt="Logo Esencia Ardiente Chincha" class="logo"/>
+  <h1>Esencia Ardiente Chincha</h1>
+  <p class="subtitulo">Integración Cultural - Síguenos en nuestras redes</p>
+
+  <div class="redes">
+    <a href="https://www.tiktok.com/@ejemplo" class="btn-red" target="_blank">TikTok</a>
+    <a href="https://www.facebook.com/ejemplo" class="btn-red" target="_blank">Facebook</a>
+    <a href="https://www.youtube.com/@ejemplo" class="btn-red" target="_blank">YouTube</a>
+  </div>
 </body>
 </html>
