--- a/index.html
+++ b/index.html
@@ -103,13 +103,13 @@
 
   <!-- Botones de redes -->
   <div class="redes">
-    <a href="https://www.facebook.com/ejemplo" class="btn-red" target="_blank">
+    <a href="https://www.facebook.com/share/1Badxo6iwM/" class="btn-red" target="_blank">
       <i class="fab fa-facebook-f"></i> Facebook
     </a>
-    <a href="https://www.tiktok.com/@ejemplo" class="btn-red" target="_blank">
+    <a href="https://www.tiktok.com/@eafilial.chincha?_t=ZM-8xhIcYtNEKm&_r=1" class="btn-red" target="_blank">
       <i class="fab fa-tiktok"></i> TikTok
     </a>
-    <a href="https://www.youtube.com/@ejemplo" class="btn-red" target="_blank">
+    <a href="https://www.youtube.com/@lobitorp2686" class="btn-red" target="_blank">
       <i class="fab fa-youtube"></i> YouTube
     </a>
   </div>
