--- a/index.html
+++ b/index.html
@@ -8,45 +8,57 @@
   <style>
     body {
       margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      min-height: 100vh;
       padding: 60px 20px;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       text-align: center;
       color: white;
-
       background: linear-gradient(135deg, #bde0fe, #ffc8dd, #cdb4db);
       background-attachment: fixed;
       background-size: cover;
+      min-height: 100vh;
     }
 
     h1 {
-      font-size: 2.6em;
-      margin-bottom: 10px;
+      font-size: 2.4em;
+      margin: 0px 0 20px;
       color: #ffffff;
       text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.25);
+      line-height: 1.3;
     }
 
-    p.subtitulo {
-      font-size: 1.2em;
-      margin-bottom: 40px;
-      color: #fff8f8;
-      text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
+    p.stitulo {
+      font-size: 1.1em;
+      color: #ffffff;
+      margin-bottom: 0px;
+      letter-spacing: 2px;
+      font-weight: 600;
+      text-shadow: 1px 1px 4px rgba(0,0,0,0.2);
     }
-
 
     .logo {
       width: 200px;
       max-width: 100%;
       height: auto;
-      margin-bottom: 5px;
+      margin-bottom: 15px;
+      filter: drop-shadow(0 6px 12px rgba(0,0,0,0.3));
+      animation: zoomInOut 4s ease-in-out infinite;
+    }
+
+    @keyframes zoomInOut {
+      0%, 100% {
+        transform: scale(1);
+      }
+      50% {
+        transform: scale(1.1);
+      }
     }
 
     .redes {
       display: flex;
       flex-direction: column;
       gap: 20px;
-      max-width: 340px;
-      margin: auto;
+      max-width: 360px;
+      margin: 40px auto 0;
     }
 
     .btn-red {
@@ -59,17 +71,17 @@
       font-size: 18px;
       font-weight: 600;
       color: white;
-      background: linear-gradient(135deg, #ff8ec9, #c77dff);
+      background: linear-gradient(135deg, #942f74, #5c2b99);
       border: none;
       border-radius: 12px;
-      transition: transform 0.3s, box-shadow 0.3s;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+      transition: transform 0.3s, box-shadow 0.3s, background 0.3s;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.25);
     }
 
     .btn-red:hover {
-      transform: scale(1.05);
-      box-shadow: 0 6px 16px rgba(0,0,0,0.3);
-      background: linear-gradient(135deg, #d88dff, #ff9ed1);
+      transform: scale(1.06);
+      box-shadow: 0 6px 18px rgba(0, 0, 0, 0.35);
+      background: linear-gradient(135deg, #7e2373, #4b1d8b);
     }
 
     .btn-red i {
@@ -83,23 +95,63 @@
         flex-wrap: wrap;
       }
     }
+
+    /* Pantalla de bienvenida */
+    #intro {
+      position: fixed;
+      inset: 0;
+      background: rgba(0,0,0,0.85);
+      color: white;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      z-index: 9999;
+    }
+
+    #intro button {
+      padding: 12px 24px;
+      font-size: 18px;
+      border: none;
+      border-radius: 10px;
+      background: #ffffff;
+      color: #000;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+
+    #intro button:hover {
+      background: #e4e4e4;
+    }
   </style>
 </head>
 <body>
-  <!-- 🎵 Audio de fondo (invisible) -->
-<button onclick="document.getElementById('bgMusic').muted = false; document.getElementById('bgMusic').play();" style="position:fixed; bottom:20px; right:20px; padding:10px 16px; border:none; border-radius:8px; background:#ffffff33; color:white; backdrop-filter:blur(6px); font-weight:bold; cursor:pointer;">
-  🔊 Escuchar música
-</button>
 
-<audio id="bgMusic" autoplay loop muted>
-  <source src="musica.mp3" type="audio/mpeg">
-  Tu navegador no soporta audio.
-</audio>
+  <!-- Pantalla de bienvenida -->
+  <div id="intro">
+    <p style="font-size: 1.5em; margin-bottom: 20px;">🎶 ¡Bienvenid@ a Esencia Chincha!</p>
+    <button onclick="startMusic()">Iniciar experiencia</button>
+  </div>
 
-  <!-- Logo y título -->
-  <img src="logo.PNG" alt="Logo Esencia Ardiente Chincha" class="logo"/>
-  <h1>Esencia Ardiente<br>Chincha</h1>
-  <p class="subtitulo">Integración Cultural - Síguenos en nuestras redes</p>
+  <!-- Audio -->
+  <audio id="bgMusic" autoplay loop muted>
+    <source src="musica.mp3" type="audio/mpeg">
+    Tu navegador no soporta audio.
+  </audio>
+
+  <script>
+    function startMusic() {
+      const audio = document.getElementById('bgMusic');
+      audio.muted = false;
+      audio.play();
+      document.getElementById('intro').style.display = 'none';
+    }
+  </script>
+
+  <!-- Contenido principal -->
+  <img src="logo.PNG" alt="Logo Esencia Ardiente Filial Chincha" class="logo"/>
+  <p class="stitulo">Integración Cultural</p>
+  <h1>Esencia Ardiente<br>Filial<br>Chincha</h1>
 
   <!-- Botones de redes -->
   <div class="redes">
@@ -113,6 +165,8 @@
       <i class="fab fa-youtube"></i> YouTube
     </a>
   </div>
+
 </body>
 </html>
+
 
