--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
   <!-- Pantalla de bienvenida -->
   <div id="intro">
-    <p style="font-size: 1.5em; margin-bottom: 20px;">🎶 ¡Bienvenid@ a Esencia Chincha!</p>
+    <p style="font-size: 1.5em; margin-bottom: 20px;">🎶 ¡Bienvenid@ a Esencia Ardiente!</p>
     <button onclick="startMusic()">Iniciar experiencia</button>
   </div>
 
